--- a/404.md
+++ b/404.md
@@ -1,8 +1,11 @@
 --- 
 layout: page 
+permalink: /404.html
 ---
 
 <p>
     <strong>Page not found :(</strong>
 </p>
 <p>The requested page could not be found.</p>
+
+<p style="text-align: center"><button class="btn btn-lg btn-dark"><a style="text-decoration:none" href="/">Back to Home</a></button></p>
